--- a/src/layouts/Navbar/Navbar.css
+++ b/src/layouts/Navbar/Navbar.css
@@ -127,10 +127,11 @@
       transform: translate(-100%, 60%);
       font-size: 1.5rem;
       cursor: pointer;
+      color: #fff;
     }
   
     .fa-times {
-      color: var(--primary);
+      color: #ffffff;
       font-size: 1.8rem;
     }
   
