--- a/src/layouts/Landing/Landing.css
+++ b/src/layouts/Landing/Landing.css
@@ -3,7 +3,7 @@
     background-position: center;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
+    overflow-y: hidden;
     position: fixed;
 }
 .landing-page .hero-section{
@@ -23,7 +23,7 @@
 .landing-page .hero-title{
     font-size: 5vw;
     font-weight: 900;
-    color: #fff;
+    color: #000;
 }
 .landing-page .hero-description{
     font-size: 1.5vw;
@@ -52,6 +52,7 @@
     }
     .landing-page .hero-title{
         font-size: 2rem;
+        color: #000000
     }
     .landing-page .hero-description{
         font-size: 1rem;
