--- a/src/layouts/Navbar/Navbar.css
+++ b/src/layouts/Navbar/Navbar.css
@@ -49,7 +49,7 @@
   }
   
   .nav-links {
-    color: #fff;
+    color: #000;
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -58,12 +58,12 @@
   }
   
   .nav-links:hover {
-    color: var(--primary);
+    color: rgb(10, 25, 41);
     transition: all 0.2s ease-out;
   }
   
   .fa-bars {
-    color: var(--primary);
+    color: #000;
   }
   
   .nav-links-mobile {
@@ -108,7 +108,7 @@
   
     .nav-links:hover {
       background-color: #fff;
-      color: var(--primary);
+      color: rgb(10, 25, 41);
       border-radius: 0;
     }
   
@@ -127,11 +127,11 @@
       transform: translate(-100%, 60%);
       font-size: 1.5rem;
       cursor: pointer;
-      color: #fff;
+      color: #000;
     }
   
     .fa-times {
-      color: #ffffff;
+      color: #000;
       font-size: 1.8rem;
     }
   
@@ -144,14 +144,14 @@
       text-decoration: none;
       font-size: 1.5rem;
       background-color: transparent;
-      color: #fff;
+      color: #000;
       padding: 14px 20px;
       border: 1px solid #fff;
       transition: all 0.3s ease-out;
     }
   
     .nav-links-mobile:hover {
-      background: #fff;
+      background: rgb(10, 25, 41);
       color: #242424;
       transition: 250ms;
     }
