--- a/src/layouts/Landing/Landing.css
+++ b/src/layouts/Landing/Landing.css
@@ -3,7 +3,7 @@
     background-position: center;
     width: 100%;
     height: 100%;
-    overflow-y: hidden;
+    overflow-y: auto;
     position: fixed;
 }
 .landing-page .hero-section{
